add support for master_lb_flavor
Heat supports Octavia load balancer flavors since Ussuri.
A user can control the load balancer flavor through the
master_lb_flavor property.

Change-Id: I6607664ad82d7394023b2712ac5ae2d70f8515a3

--- a/magnum/drivers/common/templates/lb_api.yaml
+++ b/magnum/drivers/common/templates/lb_api.yaml
@@ -36,6 +36,7 @@ resources:
     type: Magnum::Optional::Neutron::LBaaS::LoadBalancer
     properties:
       vip_subnet: {get_param: fixed_subnet}
+      flavor: {get_param: master_lb_flavor}
 
   listener:
     condition: allowed_cidrs_disabled
