magnum: declare master_lb_flavor
Change-Id: Ib5d5ef1e7f8fb27077d21c0cbb5f790f10f1e2fb

--- a/magnum/drivers/common/templates/lb_api.yaml
+++ b/magnum/drivers/common/templates/lb_api.yaml
@@ -18,6 +18,9 @@ parameters:
   external_network:
     type: string
 
+  master_lb_flavor:
+    type: string
+
   protocol:
     type: string
     default: TCP
