--- a/magnum/drivers/common/templates/lb_etcd.yaml
+++ b/magnum/drivers/common/templates/lb_etcd.yaml
@@ -16,6 +16,9 @@ parameters:
   fixed_subnet:
     type: string
 
+  master_lb_flavor:
+    type: string
+
   protocol:
     type: string
     default: TCP
