lb_flavor: configure lb flavor for etcd and master
Change-Id: Iae5354cd020b0077c2e10d9139071e0c7ddf3e7d

--- a/magnum/drivers/common/templates/lb_api.yaml
+++ b/magnum/drivers/common/templates/lb_api.yaml
@@ -18,7 +18,7 @@ parameters:
   external_network:
     type: string
 
-  master_lb_flavor:
+  flavor:
     type: string
 
   protocol:
@@ -39,7 +39,7 @@ resources:
     type: Magnum::Optional::Neutron::LBaaS::LoadBalancer
     properties:
       vip_subnet: {get_param: fixed_subnet}
-      flavor: {get_param: master_lb_flavor}
+      flavor: {get_param: flavor}
 
   listener:
     condition: allowed_cidrs_disabled
