--- a/magnum/drivers/common/templates/lb_etcd.yaml
+++ b/magnum/drivers/common/templates/lb_etcd.yaml
@@ -16,7 +16,7 @@ parameters:
   fixed_subnet:
     type: string
 
-  master_lb_flavor:
+  flavor:
     type: string
 
   protocol:
@@ -37,7 +37,7 @@ resources:
     type: Magnum::Optional::Neutron::LBaaS::LoadBalancer
     properties:
       vip_subnet: {get_param: fixed_subnet}
-      flavor: {get_param: master_lb_flavor}
+      flavor: {get_param: flavor}
 
   listener:
     condition: allowed_cidrs_disabled
