--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,6 @@ oslo.middleware>=4.1.0 # Apache-2.0
 oslo.policy>=3.6.0 # Apache-2.0
 oslo.reports>=2.1.0 # Apache-2.0
 oslo.serialization>=3.2.0 # Apache-2.0
-oslo.service>=2.2.0 # Apache-2.0
 oslo.upgradecheck>=1.3.0 # Apache-2.0
 oslo.utils>=4.2.0 # Apache-2.0
 oslo.versionedobjects>=2.1.0 # Apache-2.0
@@ -55,3 +54,4 @@ stevedore>=3.3.0 # Apache-2.0
 taskflow>=2.16.0 # Apache-2.0
 cryptography>=2.1.4 # BSD/Apache-2.0
 Werkzeug>=0.9 # BSD License
+git+https://github.com/cloudify-ro/oslo.service.git@stable/wallaby-cfy#egg=oslo.service
